--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,36 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-
 @custom-variant dark (&:is(.dark *));
+
+
+
+
+.swal2-icon {
+  position: relative !important;
+  justify-content: center !important;
+  width: 80px !important;
+  height: 80px !important;
+  margin: 20px auto !important;
+}
+
+.swal2-icon .swal2-icon-content {
+  font-size: 64px !important;
+}
+
+.swal2-success-line,
+.swal2-error-line-left,
+.swal2-error-line-right {
+  background-color: currentColor !important;
+  transform: none !important;
+}
+
+/* برای حرکت success خوب */
+.swal2-success-circular-line-left,
+.swal2-success-circular-line-right,
+.swal2-success-fix {
+  background-color: transparent !important;
+}
+
 
 @theme inline {
   --color-background: var(--background);
